# oscar-lic

./: .gitignore  AGENTS.md  BLOCKERS.md  CHANGELOG.md  CITATION.cff  COMPLETENESS_CHECKLIST.md  DECISIONS.md  INDEX.md  LICENSE  LICENSES.md  MANIFEST.sha256  Makefile  NEGATIVE_RESULTS.md  NOTICE.md  PROJECT_SPEC.md  PROMPT_TO_AGENT.md  README.md  RELEASE_INFO.json  RISKS.md  STATE.yaml  STATUS.md  TASKS.md  TREE.txt  pyproject.toml
baselines/: README.md  checkpoint_manifest.yaml  expected_results.yaml  ocr_models.yaml  registry.yaml  reproduction_protocol.md
configs/: README.md
data/: README.md  local_paths.yaml  manifest_protocol.md  normalization_policy.md  registry.yaml  split_policy.md
docs/: ASSIGNMENT_RERANKER_DESIGN_2026_06_25.md  BITSTREAM_SPEC.md  CLAIM_EVIDENCE_MATRIX.md  CONDITIONAL_UTILITY_STOP_MODEL_PLAN_2026_06_26.md  EXCEPTION_CENTER_REPLACEMENT_PLAN_2026_06_26.md  FOUNDATION_SETUP_2026_06_25.md  HANDOFF.md  LIC_RESEARCH_SURVEY_2026_06_25.md  MLICPP_ADAPTER_DESIGN_2026_06_25.md  NEXT_EXPERIMENT_PLAN.md  OSCAR_LIC_UNDERSTANDING.md  THREAT_MODEL.md  TOP8_ASSIGNMENT_VERIFIER_PLAN_2026_06_26.md  agent_workflow.md  architecture.md  compute_and_storage_budget.md  experiment_plan.md  implementation_interfaces.md  losses.md  paper_outline.md  privacy_ethics.md  reproducibility.md  reviewer_risk_register.md  submission_checklist.md  utility_definition.md
environment/: Dockerfile.mlic  README.md  analysis.yml  compressai_snapshot.yml  hardware_profiles.yaml  locks.bootstrap-py310.txt  locks.mlic-py310-cu118.txt  locks.ocr-parseq-py310-cu118.txt  (+12 more)
(+497 files in other folders)
